# markov-chain-generator

./: CMakeLists.txt  README.md  downloader.cpp  downloader.h  generator.cpp  learn.cpp  test.cpp  textgenerator.cpp  textgenerator.h  utils.cpp  utils.h
